k8s/observability/opensearch-dashboards/overlays/staging/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-opensearch-dashboards
spec:
  parentRefs:
    - name: homelab-gw
      namespace: staging-networking
      sectionName: https
  hostnames:
    - opensearch.apps.10-96-11-221.sslip.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: opensearch-dashboards-staging
          port: 5601
